[ci] More code cleanup as no longer a suggestion but java 9 has deprecated usage